# vosk-api

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.bat  start_server.bat  test_client.py  test_server.bat  vosk_api.bat
